--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Habeebkhan1312.github.io/22691A3141"
   "name": "url-shortener",
   "version": "0.1.0",
   "private": true,
